# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2015-12-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add configuration validation to make sure
      dest_list_deny and dest_list_allow are undefined
      when dest_refresh is none (i.e., not sending)
    * Update cpg
      (make sure all scopes are started after cloudi_core has set
       the nodes_set listen type)

2015-12-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix logger flooding check to avoid prematurely triggering the
      flooding prevention for a single process

2015-12-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add support for X-HTTP-Method-Override header values in
      cloudi_service_http_elli and cloudi_service_http_cowboy
      (add the outgoing service name to warnings, when it is available)
    * Cleanup cloudi_request_info to make text_pairs more well-defined
        * values can be iolists
        * keys must be of length 1 or greater

2015-11-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service_filesystem redirect configuration argument to
      permanently redirect existing file paths to similar service names
    * Allow the cloudi_service_filesystem configuration arguments
      write_truncate, write_append, notify_one, notify_all
      to take service name patterns
    * Make the OPTIONS allow response header value provided by
      cloudi_service_filesystem correct
    * Add cloudi_args_type:service_name_suffix/2 and
      cloudi_args_type:service_name_pattern_suffix/2 for the common
      task of getting a service name suffix during service initialization
    * Update types and guards to enforce nonempty_string() on the
      configured service prefix and usage of the service request's
      service name and service name pattern
    * Update erlang_term:
        * Adds support for using the size of binaries nested in maps
        * Fixes the improper list size
