@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2015-12-11 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add configuration checks for nodes_set
+      reconnect_start and reconnect_delay
+
 2015-12-09 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add configuration validation to make sure
